--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 }
 
 .fa:hover {
-    opacity: 0.7;
+    opacity: 0.5;
 }
 
 .fa-facebook {
@@ -29,18 +29,19 @@
 .fa-instagram {
   background: #000000;
   color: white;
-
+}
+.fa-envelope{
+  background: #000000;
+  color: white;
+}
 </style>
 </head>
 
 <body bgcolor="black" text="white">
-
-
+
 <center><img src="LOGO REDES Spika-04.jpg"width="40%" height="80%"></center>
-<center><a href="https://www.facebook.com/spikabeercompany/" class="fa fa-facebook"></a><a href="https://www.instagram.com/spika_beer_co/" class="fa fa-instagram"></a></center>
-
-
-
+<center><a href="https://www.facebook.com/spikabeercompany/" class="fa fa-facebook"></a><a href="https://www.instagram.com/spika_beer_co/" class="fa fa-instagram"></a><a href="https://www.facebook.com/spikabeercompany/" class="fa fa-envelope"></a></center>
+
 </body>
 
 
