--- a/index.html
+++ b/index.html
@@ -38,10 +38,13 @@
 </head>
 
 <body bgcolor="black" text="white">
-
-<center><img src="LOGO REDES Spika-04.jpg"width="40%" height="80%"></center>
-<center><a href="https://www.facebook.com/spikabeercompany/" class="fa fa-facebook"></a><a href="https://www.instagram.com/spika_beer_co/" class="fa fa-instagram"></a><a href="mailto:spikabeerco@gmail.com" class="fa fa-envelope"></a></center>
-
+
+
+<center><img src="LOGO REDES Spika-04.jpg"width="scale" height="80%"></center>
+<center><a href="https://www.facebook.com/spikabeercompany/" class="fa fa-facebook"></a><a href="https://www.instagram.com/spika_beer_co/" class="fa fa-instagram"></a><a href="mailto:spikabeerco@gmail.com" class="fa fa-envelope"></a></center>
+
+
+
 </body>
 
 
