--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <body bgcolor="black" text="white">
 
 
-<center><img src="LOGO REDES Spika-04.jpg"width="device-width, inicial-scale=0.5"height="80%"></center>
+<center><img src="LOGO REDES Spika-04.jpg"width="width=device-width, initial-scale=1" height="80%"></center>
 <center><a href="https://www.facebook.com/spikabeercompany/" class="fa fa-facebook"></a><a href="https://www.instagram.com/spika_beer_co/" class="fa fa-instagram"></a><a href="mailto:spikabeerco@gmail.com" class="fa fa-envelope"></a></center>
 
 
