--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <link rel="icon" href="/favicon.ico" type="image/x-icon">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 <style>
 .fa {
   padding: 6px;
@@ -38,13 +39,10 @@
 </head>
 
 <body bgcolor="black" text="white">
-
-
-<center><img src="LOGO REDES Spika-04.jpg"width="width=device-width, initial-scale=9" height="80%"></center>
-<center><a href="https://www.facebook.com/spikabeercompany/" class="fa fa-facebook"></a><a href="https://www.instagram.com/spika_beer_co/" class="fa fa-instagram"></a><a href="mailto:spikabeerco@gmail.com" class="fa fa-envelope"></a></center>
-
-
-
+<div class="contenedor">
+<center><img src="LOGO REDES Spika-04.jpg"width="device-width, inicial scale=0" height="80%"></center>
+<center><a href="https://www.facebook.com/spikabeercompany/" class="fa fa-facebook"></a><a href="https://www.instagram.com/spika_beer_co/" class="fa fa-instagram"></a><a href="mailto:spikabeerco@gmail.com" class="fa fa-envelope"></a></center>
+
 </body>
 
 
