--- a/index.html
+++ b/index.html
@@ -35,17 +35,19 @@
   background: #000000;
   color: white;
 }
+.img {
+width=100%
+max-width=100%
+}
+
 </style>
 </head>
 
 <body bgcolor="black" text="white">
-
-
-<center><img src="LOGO REDES Spika-04.jpg"width="scale" height="80%"></center>
-<center><a href="https://www.facebook.com/spikabeercompany/" class="fa fa-facebook"></a><a href="https://www.instagram.com/spika_beer_co/" class="fa fa-instagram"></a><a href="mailto:spikabeerco@gmail.com" class="fa fa-envelope"></a></center>
-
-
-
+<div class="contenedor">
+<center><img src="LOGO REDES Spika-04.jpg"width="device-width, inicial scale=0" height="80%"></center>
+<center><a href="https://www.facebook.com/spikabeercompany/" class="fa fa-facebook"></a><a href="https://www.instagram.com/spika_beer_co/" class="fa fa-instagram"></a><a href="mailto:spikabeerco@gmail.com" class="fa fa-envelope"></a></center>
+
 </body>
 
 
