--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 </style>
 </head>
 
-<body bgcolor="black" text="white"><center><img src="LOGO.png"></center><center><a href="https://www.facebook.com/spikabeercompany/" class="fa fa-facebook"></a><a href="https://www.instagram.com/spika_beer_co/" class="fa fa-instagram"></a><a href="mailto:spikabeerco@gmail.com" class="fa fa-envelope"></a></center></body>
+<body bgcolor="black" text="white"><center><img src="logo.PNG"></center><center><a href="https://www.facebook.com/spikabeercompany/" class="fa fa-facebook"></a><a href="https://www.instagram.com/spika_beer_co/" class="fa fa-instagram"></a><a href="mailto:spikabeerco@gmail.com" class="fa fa-envelope"></a></center></body>
 
 
 </html>
