--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
 <head>
 
+
+
+</head>
 <title>Spika Cerveza Artesanal</title>
 <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 <link rel="icon" href="/favicon.ico" type="image/x-icon">
@@ -39,11 +42,13 @@
 .fa-logo.svg
 
 </style>
+
 </head>
 
 
 
 <body bgcolor="black" text="white">
+
 <center><canvas id='canvas' width='378' height='416'></canvas>
     <script>
     var ctx = document.getElementById("canvas").getContext("2d");
@@ -773,8 +778,6 @@
 
     </script>
 </center>
-
-
 
 </body>
 <center><a href="https://www.facebook.com/spikabeercompany/" class="fa fa-facebook"></a><a href="https://www.instagram.com/spika_beer_co/" class="fa fa-instagram"></a><a href="mailto:spikabeerco@gmail.com" class="fa fa-envelope"></a></center></body>
