--- a/index.html
+++ b/index.html
@@ -782,5 +782,6 @@
 </body>
 <center><a href="https://www.facebook.com/spikabeercompany/" class="fa fa-facebook"></a><a href="https://www.instagram.com/spika_beer_co/" class="fa fa-instagram"></a><a href="mailto:spikabeerco@gmail.com" class="fa fa-envelope"></a></center></body>
 
+<center><iframe src="https://www.google.com/maps/d/embed?mid=113IHz3vmoleJZInpod2oTPPNZYihspcU&hl=es" width="640" height="480"></iframe></center>
 
 </html>
