--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-142991789-1"></script>
 <script>
+<script data-ad-client="ca-pub-1807695631273901" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>	
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
